# AndroidSketchPad

./: README.md
SketchPad/app/: build.gradle
SketchPad/app/src/androidTest/java/com/shereen/sketchpad/: ExampleInstrumentedTest.java
SketchPad/app/src/androidTest/java/com/shereen/sketchpad/view/: MainActivityTest.java
SketchPad/app/src/main/: AndroidManifest.xml
SketchPad/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
SketchPad/app/src/main/java/com/shereen/sketchpad/: Constants.java  CustomOnItemSelectedListener.java
SketchPad/app/src/main/java/com/shereen/sketchpad/model/: DataRepository.java  Sketch.java
SketchPad/app/src/main/java/com/shereen/sketchpad/model/entity/: TouchPath.java
SketchPad/app/src/main/java/com/shereen/sketchpad/view/: BlankFragment.java  DrawFragment.java  MainActivity.java  MenuFragment.java  OpenGLFragment.java  SpinnerAdapter.java  Utilities.java
SketchPad/app/src/main/java/com/shereen/sketchpad/viewmodel/: MainViewModel.java
SketchPad/app/src/main/res/drawable/: spinner_color.xml
SketchPad/app/src/main/res/layout/: activity_main.xml  background_item.xml  fragment_draw.xml  fragment_menu.xml  fragment_open_gl.xml  pencil_item.xml
SketchPad/app/src/main/res/menu/: bottom_nav_bar.xml
SketchPad/app/src/main/res/mipmap-anydpi-v26/: ic_sketch.xml
SketchPad/app/src/main/res/values/: colors.xml  dimens.xml  ic_sketch_background.xml  strings.xml  styles.xml
SketchPad/app/src/test/java/com/shereen/sketchpad/: ExampleUnitTest.java
SketchPad/gradle/wrapper/: gradle-wrapper.properties
(+17 files in other folders)
